# StreamlineApp

./: .prettierignore  .replit  Pasted--StreamlineDev-npm-audit-npm-audit-report-ajv-6-12-3-Severity-moderate-Prototype-Poll-1727265778040.txt  Pasted--StreamlineDev-npm-fund-streamlinedev-1-0-0-https-github-com-vitejs-vite-sponsor-1--1727265661647.txt  Pasted--use-client-import-React-useState-useEffect-from-react-import-motion-AnimatePresence-1727029530920.txt  Pasted--use-client-import-motion-useAnimation-from-framer-motion-import-useState-useEffect--1726882016048.txt  Pasted-from-flask-import-Flask-send-from-directory-abort-request-jsonify-from-flask-cors-import-CORS--1727105209110.txt  README.md  ai_assistant.py  auth.py  collaboration.py  config.py  main.py  models.py  package-lock.json  package.json  projects.py  pyproject.toml  replit.nix  setup_directory.py
StreamlineApp/: App.js  package.json
StreamlineApp/src/components/: LoginScreen.js
app/static/: bypass.html  index.html  styles.css
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  ComponentLibrary.jsx  Login.jsx  StreamlineAppHomepage.jsx  index.html
frontend/static/react/: index.html
static/css/: components.css  style.css
static/js/: app.js  export.js  preview.js
static/react/: index.html
static/react/assets/: main-14c878df.js  main-3866c0b1.js  main-9dfdb2ef.js
templates/: base.html  dashboard.html  editor.html  index.html  login.html  register.html
