[tool.poetry]
name = "repl-nix-streamlinedev"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
werkzeug = "^3.0.4"
scikit-learn = "^1.5.2"
flask-login = "^0.6.3"
psycopg2-binary = "^2.9.9"
openai = "^1.47.0"
flask-cors = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
